[gd_scene load_steps=3 format=2]

[ext_resource path="res://FNaF 1/536.png" type="Texture" id=1]
[ext_resource path="res://Animatronics/Foxy/Scripts/Foxy.gd" type="Script" id=2]

[node name="Foxy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.01
autostart = true

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_camera_down"]
